# datacentral-cloud-llc

./: .gitignore  Admin NetworkBuster.lnk  BUILD_GUIDE.md  CMakeLists.txt  CONSOLIDATION_SUMMARY.md  DOWNLOAD_GUIDE.md  DataCentral Cloud LLC Quick Setup.lnk  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Install NetworkBuster (Admin).lnk  LICENSE_PERSONAL.txt  LICENSE_PRIVATE  Makefile  NetworkBuster AI ARCH.lnk  NetworkBuster Quick Admin - data-central-cloud-llc.lnk  NetworkBuster Quick Admin.lnk  NetworkBuster Start All Services.lnk  OS_UTILS_DOCS.md  PIP_UPGRADE_SUMMARY.md  README-DATACENTRA.md  README.md  STORY_INTEGRATION.md  Studio Code.lnk  TOKEN_DOCS.md  Verify Admin (CUDA) Elevated.lnk  Verify Admin (CUDA).lnk  ai-training-pipeline.py  body  config.py  installer.bat  installer.ps1  main_parser.py  math_utils.py  nbarchnb.lnk  networkbuster_git_key.pub  package.py  personal_license.py  pom.xml  quickstart.py  requirements.txt  (+14 more)
README/: WORKERS.md
assets/: matrix_screenplay.txt
core/: __init__.py  avatar.py  compositor.py  data_recycler.py  log_monitor.py
docs/: matrix-arch-linux.md
examples/: os_utils_demo.py
gui/: avatar_panel.py  dashboard.py  data_panel.py  log_panel.py  main_window.py
kubernetes-training/: README.md
networkbuster/: .dockerignore  Dockerfile  docker-compose.yml
releases/: DOWNLOAD_GUIDE.md  FACEBOOK_POST.txt
scripts/: banner.py  build_distro.py  configure_git.ps1  configure_git.sh  create-release.ps1  distro_download_manager.py  install-worker-schtask.ps1  networkbuster-profile.ps1  protection-installer.ps1  run-worker.ps1  (+7 more)
(+67 files in other folders)
